LUTECE-2264 : Fixes Sonar issues